overflow fix

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+
+}
 @import "color-custom-properties";
 @import "typography";
 @import "helpers";
